--- a/julia-intro/docs/_toc.yml
+++ b/julia-intro/docs/_toc.yml
@@ -2,23 +2,23 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: intro
+root: 00-intro
 parts:
 - caption: Introduction to Julia
   chapters:
-  - file: julia-intro-intro
-  - file: julia-intro-installation
-  - file: julia-intro-syntax-operators-variables
-  - file: julia-intro-arrays
-  - file: julia-intro-syntax-fn-control
-  - file: julia-intro-anonymous-and-do-block
-  - file: julia-intro-multiple-dispatch
-  - file: julia-intro-broadcasting
-  - file: julia-intro-julia-community
+  - file: 01-julia-intro-intro
+  - file: 02-julia-intro-installation
+  - file: 03-julia-intro-syntax-operators-variables
+  - file: 04-julia-intro-arrays
+  - file: 05-julia-intro-syntax-fn-control
+  - file: 06-julia-intro-anonymous-and-do-block
+  - file: 07-julia-intro-multiple-dispatch
+  - file: 08-julia-intro-broadcasting
+  - file: 09-julia-intro-julia-community
 - caption: Additional Topics
   chapters:
-    - file: julia-intro-plots
-    - file: julia-intro-dataframes
+    - file: 10-julia-intro-plots
+    - file: 11-julia-intro-dataframes
 - caption: Exercises
   chapters:
   - file: exercises/install
