--- a/julia-intro/docs/_config.yml
+++ b/julia-intro/docs/_config.yml
@@ -9,6 +9,7 @@ logo: images/juliaheplogo.png
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
+  timeout: 300
   execute_notebooks: force
 
 # Define the name of the latex output file for PDF builds
